# dream_cloud_studio

./: .env.example  SYSTEM_DESIGN.md  index.html  package-lock.json  package.json  remotion.config.ts  tailwind.config.js  vite.config.ts
docs/: OTIO_MLT_TIMELINE_DESIGN.md
scripts/: migrate-base64-to-storage.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  melt_runner.rs  video_decoder.rs
src/config/: imageModes.ts
src/contexts/: AuthContext.tsx
src/lib/: api-proxy.ts  supabase.ts
src/mlt/: index.ts  render-service.ts  types.ts  xml-generator.ts
src/otio/: index.ts  migration.ts  rational-time.ts  serialization.ts  timeline.ts  types.ts
src/pages/: AnimationEditor.tsx  AnimationLibrary.tsx  AuthCallback.tsx  CreateAssetWizard.tsx  CreateFoundationWizard.tsx  CreatePlatform.tsx  CreateProjectWizard.tsx  CreatorPage.tsx  Dashboard.tsx  DevTools.tsx  FoundationDetail.tsx  Login.tsx  PlatformDetail.tsx  PlatformEdit.tsx  Profile.tsx  SignUp.tsx  UpscalePage.tsx  Workspace.tsx
src/remotion/: AnimationComposition.tsx  Root.tsx  TimelineComposition.tsx  VideoComposition.tsx  VideoPreview.tsx  index.ts
src/services/: animation.ts  assets.ts  auth.ts  claude.ts  elevenlabs.ts  fal.ts  foundations.ts  google-ai.ts  grok.ts  index.ts  localStorage.ts  otio-bridge.ts  platforms.ts  projects.ts  providers.ts  render.ts  replicate.ts  scripts.ts  seedData.ts  storyboard.ts  timeline.ts
src/state/: assetWizardStore.ts  creatorStore.ts  foundationStore.ts  foundationWizardStore.ts  libraryStore.ts  projectWizardStore.ts  uiStore.ts  workspaceStore.ts
src/types/: database.ts  speech.d.ts  timeline.ts
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_storage_buckets.sql  003_make_generated_media_public.sql  003_update_asset_categories.sql  004_add_video_content.sql  005_add_compositions_and_audio_plans.sql  006_add_video_url_to_shots.sql  007_local_assets.sql  008_scripts.sql  010_foundations.sql  (+12 more)
(+91 files in other folders)
