[package]
name = "dream-cloud-studio"
version = "0.1.0"
description = "AI-powered video creation studio"
authors = ["Dream Cloud Studio"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "dream_cloud_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# Video decoding
ffmpeg-next = "7"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
